--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "styled-components": "^4.0.3"
+    "styled-components": "^4.0.3",
+    "update": "^0.7.4"
   },
   "devDependencies": {
-    "electron": "~1.7.8",
+    "electron": ">=1.8.2-beta5",
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "@babel/node": "^7.0.0",
